jenkins-operator/jenkins_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ing-dev
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:017692044983:certificate/4dfd8208-b768-46de-9464-be00c4ad320c"
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP":8080}, {"HTTPS": 8443}]'
    kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/group.name: jenkins
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: jenkins-dev.blackowl.click
      http:
        paths:
          - backend:
              serviceName: jenkins-operator-http-jenkins-dev
              servicePort: 8080
            path: '/'
            pathType: Prefix
